samples/_failures_safe/1761654367_ac2d2d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_04dd58ce.c: In function ‘executeAlgorithm’:
./samples/SAFE/__tmp_04dd58ce.c:142:17: error: expected ‘)’ at end of input
  142 |     switch (algo
      |            ~    ^
      |                 )
./samples/SAFE/__tmp_04dd58ce.c:142:5: error: expected declaration or statement at end of input
  142 |     switch (algo
      |     ^~~~~~
